# poetry-base

./: Dockerfile  docker-compose.yml  pyproject.toml
jupyter/: utils.ipynb  utils.py
test/: test.csv
